style: add color variables

--- a/src/sass/_abstracts.scss
+++ b/src/sass/_abstracts.scss
@@ -1,1 +1,16 @@
 // variables, mixins, functions, placeholders
+
+$color__primary: "#000000";
+$color__secondary: "";
+
+@font-face {
+    font-family: 'Mont';
+    src: url('../fonts/Mont-Regular.eot');
+    src: local('Mont Regular'), local('Mont-Regular'),
+        url('../fonts/Mont-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Mont-Regular.woff2') format('woff2'),
+        url('../fonts/Mont-Regular.woff') format('woff'),
+        url('../fonts/Mont-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
