--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,1 +1,14 @@
 // typography, reset rules
+
+@import './sass/_abstracts.scss';
+@import url('https://fonts.googleapis.com/css?family=Gothic+A1&display=swap');
+
+
+body {
+    font-family: $font__secondary;
+}
+
+h1 {
+    color: $color__primary--black;
+    font-family: Mont;
+}
