--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -6,9 +6,10 @@
 
 body {
     font-family: $font__secondary;
+    background-color: $color__white;
 }
 
 h1 {
-    color: $color__primary--black;
+    color: $color__black--primary;
     font-family: Mont;
 }
