--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,5 +1,9 @@
+@import '../sass/abstracts';
+
 .App {
   text-align: center;
+  background-color: $color__white;
+  color: $color__black--secondary;
 }
 
 .App-logo {
@@ -14,7 +18,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
