--- a/src/index.scss
+++ b/src/index.scss
@@ -4,3 +4,5 @@
         './sass/layout.scss';
 
 @import './components/App.scss';
+@import './components/Grid.scss';
+@import './components/Text.scss';
