--- a/src/index.scss
+++ b/src/index.scss
@@ -6,3 +6,5 @@
 @import './components/App.scss';
 @import './components/Grid.scss';
 @import './components/Text.scss';
+@import './components/Slider.scss';
+@import './components/Sidebar.scss';
