component: add IconPanel component to Sidebar

--- a/src/components/Grid.scss
+++ b/src/components/Grid.scss
@@ -9,5 +9,5 @@
         'slider slider slider slider slider slider slider slider slider slider sidebar sidebar'
         'slider slider slider slider slider slider slider slider slider slider sidebar sidebar'
         'slider slider slider slider slider slider slider slider slider slider sidebar sidebar'
-        'slider slider slider slider slider slider slider slider slider slider sidebar sidebar'
+        'slider slider slider slider slider slider slider slider slider slider sidebar sidebar';     
 }
