--- a/src/index.scss
+++ b/src/index.scss
@@ -8,3 +8,4 @@
 @import './components/Text.scss';
 @import './components/Slider.scss';
 @import './components/Sidebar.scss';
+@import './components/IconsPanel.scss';
