--- a/src/components/Slider.scss
+++ b/src/components/Slider.scss
@@ -1,3 +1,14 @@
+@import "../sass/abstracts", "../sass/base";
+
 .Slider {
     grid-area: slider;
+
+    @include grid(10, 6);
+    grid-template-area: 
+        'slide-info slide-info slide-info slide-info slide-info slide-img slide-img slide-img slide-img slide-img'
+        'slide-info slide-info slide-info slide-info slide-info slide-img slide-img slide-img slide-img slide-img'
+        'slide-info slide-info slide-info slide-info slide-info slide-img slide-img slide-img slide-img slide-img'
+        'slide-info slide-info slide-info slide-info slide-info slide-img slide-img slide-img slide-img slide-img'
+        'slide-info slide-info slide-info slide-info slide-info slide-img slide-img slide-img slide-img slide-img'
+        'slide-num slide-num slide-num slide-num slide-num slide-img slide-img slide-img slide-img slide-img';
 }
